--- a/src/index.css
+++ b/src/index.css
@@ -149,3 +149,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: inherit;
+}
