--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,16 @@
   -moz-box-sizing: border-box;
 }
 
+/* fix ios 100vh */
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+
+html {
+  height: -webkit-fill-available;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
